--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chelsea Hurst</title>
+    <meta name="description" content="This is Chelsea Hurst's Online Coding and Design Portfolio.">
+    <title>Front-end developer - Chelsea Hurst</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -62,7 +63,7 @@
     <div class="container">
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded">
+          <img src="images/yoga.png" alt="Yoga App" class="img-fluid rounded">
         </div>
         <div class="col-6">
             <h2 class="mb-3 text-start">Yoga app</h2>
@@ -81,12 +82,12 @@
                 </div>
           </div>
           <div class="col-6">
-              <img src="images/weather.png" class="img-fluid rounded">
+              <img src="images/weather.png" alt="Weather App" class="img-fluid rounded">
             </div>
       </div>
       <div class="row mt-5">               
           <div class="col-6">
-              <img src="images/yogurt.png" class="img-fluid rounded">
+              <img src="images/yogurt.png" alt="Yogurt Website" class="img-fluid rounded">
           </div>
           <div class="col-6">
               <h2 class="mb-3 text-start">Yogurt Website</h2>
