Added media queries for mobile devices

--- a/about.html
+++ b/about.html
@@ -73,10 +73,9 @@
       </div>
     </div>
     <div id="contact">
-      <h2>📮 Contact me</h2>
+      <h2 class="contact-me">📮 Contact me</h2>
       <a href="mailto:chelsea.ann.hurst@gmail.com" class="email-link"
-        >chelsea.ann.hurst@gmail.com</a
-      >
+        >chelsea.ann.hurst@gmail.com</a>
     </div>
   </body>
 </html>
