--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is Chelsea Hurst's Online Coding and Design Portfolio.">
+    <meta name="description" content="This is Chelsea Hurst's Online Coding and Design Portfolio. Check out some of my work, and reach out to collaborate.">
     <title>Front-end developer - Chelsea Hurst</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -62,36 +62,36 @@
     </div>
     <div class="container">
       <div class="row mt-5">
-        <div class="col-6">
-          <img src="images/yoga.png" alt="Yoga App" class="img-fluid rounded">
+        <div class="col-md-6">
+          <img src="images/yoga.png" alt="Yoga App" class="img-fluid rounded d-none d-md-block">
         </div>
-        <div class="col-6">
-            <h2 class="mb-3 text-start">Yoga app</h2>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</div>
+        <div class="col-md-6 text-center">
+            <h2 class="portfolio mb-3">Yoga app</h2>
+            <div class="portfolio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</div>
             <div class="mt-5">
               <a href="#" class="primary-links">Launch Yoga App</a>
             </div>
           </div>
       </div>
       <div class="row mt-5">         
-          <div class="col-6">
-              <h2 class="mb-3 text-start">Weather app</h2>
-              <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</div>
+          <div class="col-md-6 text-center">
+              <h2 class="portfolio mb-3">Weather app</h2>
+              <div class="portfolio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</div>
               <div class="mt-5">
                   <a href="#" class="primary-links">Launch Weather App</a>
                 </div>
           </div>
           <div class="col-6">
-              <img src="images/weather.png" alt="Weather App" class="img-fluid rounded">
+              <img src="images/weather.png" alt="Weather App" class="img-fluid rounded d-none d-md-block">
             </div>
       </div>
       <div class="row mt-5">               
-          <div class="col-6">
-              <img src="images/yogurt.png" alt="Yogurt Website" class="img-fluid rounded">
+          <div class="col-md-6">
+              <img src="images/yogurt.png" alt="Yogurt Website" class="img-fluid rounded d-none d-md-block">
           </div>
-          <div class="col-6">
-              <h2 class="mb-3 text-start">Yogurt Website</h2>
-              <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</div>
+          <div class="col-md-6 text-center">
+              <h2 class="portfolio mb-3">Yogurt Website</h2>
+              <div class="portfolio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</div>
               <div class="mt-5">
                   <a href="#" class="primary-links">Launch Yogurt Website</a>
                 </div>
