--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   </head>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Chelsea Hurst</a>
+        <a class="navbar-brand" href="/">Chelsea Hurst</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,13 +35,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact</a>
+              <a class="nav-link" href="/about.html#contact">Contact</a>
             </li>
             </li>
           </ul>
