--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Chelsea Hurst</a>
+        <a class="navbar-brand" href="/">Chelsea Hurst</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,13 +40,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact</a>
+              <a class="nav-link" href="/about.html#contact">Contact</a>
             </li>
             </li>
           </ul>
@@ -57,8 +57,8 @@
     <h1>Chelsea Hurst</h1>
     <h3>🇺🇸 Front-end developer, based in Virginia </h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="/about.html#contact" class="contact-link">Contact me</a>
+      <a href="/about.html" class="about-link">About me</a>
     </div>
     <div class="container">
       <div class="row mt-5">
