--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Chelsea Hurst</a>
+        <a class="navbar-brand" href="/" title="Homepage">Chelsea Hurst</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,13 +40,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="About Chelsea Hurst">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact</a>
+              <a class="nav-link" href="/about.html#contact" title="Contact Chelsea Hurst">Contact</a>
             </li>
             </li>
           </ul>
@@ -57,8 +57,8 @@
     <h1>Chelsea Hurst</h1>
     <h3>🇺🇸 Front-end developer, based in Virginia </h3>
     <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link">Contact me</a>
-      <a href="/about.html" class="about-link">About me</a>
+      <a href="/about.html#contact" class="contact-link" title="Contact Chelsea Hurst">Contact me</a>
+      <a href="/about.html" class="about-link" title="About Chelsea Hurst">About me</a>
     </div>
     <div class="container">
       <div class="row mt-5">
@@ -69,7 +69,7 @@
             <h2 class="portfolio mb-3">Yoga app</h2>
             <div class="portfolio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</div>
             <div class="mt-5">
-              <a href="#" class="primary-links">Launch Yoga App</a>
+              <a href="#" class="primary-links" title="Yoga App">Launch Yoga App</a>
             </div>
           </div>
       </div>
@@ -78,7 +78,7 @@
               <h2 class="portfolio mb-3">Weather app</h2>
               <div class="portfolio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</div>
               <div class="mt-5">
-                  <a href="#" class="primary-links">Launch Weather App</a>
+                  <a href="#" class="primary-links" title="Weather App">Launch Weather App</a>
                 </div>
           </div>
           <div class="col-6">
@@ -93,7 +93,7 @@
               <h2 class="portfolio mb-3">Yogurt Website</h2>
               <div class="portfolio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</div>
               <div class="mt-5">
-                  <a href="#" class="primary-links">Launch Yogurt Website</a>
+                  <a href="#" class="primary-links" title="Yogurt Project">Launch Yogurt Website</a>
                 </div>
           </div>  
       </div>
