--- a/about.html
+++ b/about.html
@@ -62,13 +62,13 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-sm-4">
-          <img src="images/yoga.png" alt="Yoga App" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yoga.png" alt="Yoga App" class="img-fluid p-2 mb-4 shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" alt="Weather App" class="img-fluid p-2 shadow rounded" />
+          <img src="images/weather.png" alt="Weather App" class="img-fluid p-2 mb-4 shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" alt="Yogurt Website" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yogurt.png" alt="Yogurt Website" class="img-fluid p-2 mb-4 shadow rounded" />
         </div>
       </div>
     </div>
